// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HovercardHeader /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-hovercard--header
      TEST_CLASSNAME
      {
        border-bottom: 2px solid rgb(243,245,248);
      }
>
  <Block
    padding="xLarge"
  >
    header content
  </Block>
</div>
`;

exports[`<HovercardHeader /> with default options matches its snapshot 1`] = `
<div
  className=
      y-hovercard--header
      {
        border-bottom: 2px solid rgb(243,245,248);
      }
>
  <Block
    padding="xLarge"
  >
    header content
  </Block>
</div>
`;
